--- a/PrCalculadora.dproj
+++ b/PrCalculadora.dproj
@@ -106,6 +106,7 @@
             <Form>FormCalculadora</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UOperacoesMatematicas.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
